基本架构实现

--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -3,5 +3,6 @@
   "trailingComma": "none",
   "semi": false,
   "tabWidth": 4,
-  "useTabs": false
+  "useTabs": false,
+  "arrowParens": "avoid"
 }
