--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.7",
     "qiniu-js": "3.4.2",
+    "react-router-dom": "^6.22.3",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
@@ -41,15 +42,18 @@
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "electron": "^31.0.2",
     "electron-builder": "^24.13.3",
     "electron-vite": "^2.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "lodash": "^4.17.21",
+    "postcss": "^8.4.49",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.5.2",
     "vite": "^5.3.1"
   }
